crates/fixtures/tests/snapshots/hostile__content_marks_cycle_tabs.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "a\t\n",
            "glyphs": [
              {
                "id": 28,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "\t",
            "glyphs": [],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "b\n",
            "glyphs": [
              {
                "id": 29,
                "x": 0,
                "y": 37741,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "c\n",
            "glyphs": [
              {
                "id": 30,
                "x": 0,
                "y": 51258,
                "text": {
                  "start": 0,
                  "end": 1
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "target",
            "glyphs": [
              {
                "id": 47,
                "x": 0,
                "y": 86484,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 3661,
                "y": 86484,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 9338,
                "y": 86484,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 34,
                "x": 13990,
                "y": 86484,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 32,
                "x": 19712,
                "y": 86484,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 47,
                "x": 25457,
                "y": 86484,
                "text": {
                  "start": 5,
                  "end": 6
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
