crates/fixtures/tests/snapshots/hostile__content_no_main_flow.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Text with no frame of its own to flow in.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 6015,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 51,
                "x": 11760,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 17685,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 21346,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 50,
                "x": 23971,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 36,
                "x": 32577,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 47,
                "x": 35934,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 35,
                "x": 39595,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 46365,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 41,
                "x": 48990,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 42,
                "x": 55816,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 1,
                "x": 62000,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 33,
                "x": 64625,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 45,
                "x": 68612,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 28,
                "x": 73253,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 40,
                "x": 78930,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 32,
                "x": 89079,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 1,
                "x": 94824,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 42,
                "x": 97449,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 33,
                "x": 103633,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 1,
                "x": 107620,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 36,
                "x": 110245,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 47,
                "x": 113602,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 46,
                "x": 117263,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 1,
                "x": 122152,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 42,
                "x": 124777,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 50,
                "x": 130961,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 41,
                "x": 139567,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 1,
                "x": 146393,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 47,
                "x": 149018,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 42,
                "x": 152679,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 1,
                "x": 158863,
                "y": 10707,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 415,
                "x": 161488,
                "y": 10707,
                "text": {
                  "start": 33,
                  "end": 35
                }
              },
              {
                "id": 42,
                "x": 168382,
                "y": 10707,
                "text": {
                  "start": 35,
                  "end": 36
                }
              },
              {
                "id": 50,
                "x": 174566,
                "y": 10707,
                "text": {
                  "start": 36,
                  "end": 37
                }
              },
              {
                "id": 1,
                "x": 183172,
                "y": 10707,
                "text": {
                  "start": 37,
                  "end": 38
                }
              },
              {
                "id": 36,
                "x": 185797,
                "y": 10707,
                "text": {
                  "start": 38,
                  "end": 39
                }
              },
              {
                "id": 41,
                "x": 189154,
                "y": 10707,
                "text": {
                  "start": 39,
                  "end": 40
                }
              },
              {
                "id": 473,
                "x": 195980,
                "y": 10707,
                "text": {
                  "start": 40,
                  "end": 41
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 280576,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "A note.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 8241,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 5609,
                "y": 8241,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 41,
                "x": 7577,
                "y": 8241,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 12696,
                "y": 8241,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 17249,
                "y": 8241,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 19995,
                "y": 8241,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 473,
                "x": 24058,
                "y": 8241,
                "text": {
                  "start": 6,
                  "end": 7
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
